sass/example.scss
@import "compass", "_animations";

article[data-high] section > div {
	@include box-shadow (0 0 0 .25em rgba(0, 0, 0, .2));
}

nav[role="configuration"] {
	position:fixed;
	bottom:0;
	height:2em;
	width:100%;
	background:#f00;
}

div[data-logo="crystallo"] {
  position:absolute;
  left:50%;
  font-size:3em;
  margin:0 0 0 -1em;
  background:rgba(255, 255, 0, .4);
  width:2em;
  height:2em;
  @include box-shadow (
    inset 0 0 0 .45em #fff,
    inset 0 0 0 .75em rgba(255, 0, 255, .3),
    0 0 0 .15em rgba(30, 30, 0, .3)
  );
  @include animation (crystallo 9s infinite forwards linear);
}

div[data-logo="crystallo"]:before,
div[data-logo="crystallo"]:after {
  position:absolute;
  left:0;
  top:0;
  z-index:-1;
  width:2em;
  height:2em;
  content:'';
  background:rgba(0, 0, 0, .1);
  @include transform (rotate(90deg));
  @include border-radius (2em 1em);
}

div[data-logo="crystallo"]:after {
  transform:rotate(45deg);
  background:inherit;
  opacity:.6;
}

@include keyframes (crystallo) {
  0% {}
  25% {
    background:rgba(255, 120, 120, .7);
    @include box-shadow (
      inset 0 0 0 .45em #fff,
      inset -.25em -.25em 0 .75em rgba(0, 0, 255, .4),
      0 0 0 .15em rgba(90, 0, 90, .3)
    );
    @include border-radius (1em .5em);
  }
  75% {
    background:rgba(120, 255, 255, .5);
    @include box-shadow (
      inset 0 0 0 .45em rgba(120, 0, 0, .3),
      inset .25em .25em 0 .75em rgba(0, 255, 30, .8),
      0 0 0 .15em rgba(255, 255, 255, .9)
    );
    @include border-radius (1em .5em);
  }
  100% {
    @include transform (rotate(360deg));
  }
}

/* small screens */
@media screen and (max-width: 44em) {
  div[data-logo="crystallo"] {
  	font-size:2.2em;
  }
}

